--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "gatsby-starter-default",
-  "private": true,
+  "name": "azure-bootcamp-medellin",
+  "private": false,
   "description": "A simple starter to get up and developing quickly with Gatsby",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "Cristian Moreno <khriztianmoreno@gmail.com>",
   "dependencies": {
     "gatsby": "^2.0.119",
     "gatsby-image": "^2.0.29",
@@ -19,21 +19,41 @@
     "react-helmet": "^5.2.0"
   },
   "keywords": [
-    "gatsby"
+    "avanet",
+    "azure bootcamp",
+    "community",
+    "gatsby",
+    "reactjs"
   ],
   "license": "MIT",
   "scripts": {
+    "precommit": "lint-staged",
     "build": "gatsby build",
     "develop": "gatsby develop",
     "start": "npm run develop",
-    "serve": "gatsby serve",
+    "lint": "eslint --cache --fix ./",
     "test": "echo \"Write tests! -> https://gatsby.app/unit-testing\""
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx,json}": [
+      "eslint --fix",
+      "git add"
+    ]
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
+    "url": "https://github.com/Avanet/azurebootcamp"
   },
   "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
+    "url": "https://github.com/Avanet/azurebootcamp/issues"
+  },
+  "devDependencies": {
+    "eslint": "^5.13.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.12.4",
+    "husky": "^1.3.1",
+    "lint-staged": "^8.1.3"
   }
 }
